# HPC-Local-Tools

./: .gitignore  README.md  hpc  pyproject.toml  submit.py  sync.py  sync_project.py  sync_results.py  tools.sh
hpc_tools/: constants.py  extract_job_ids.py  submit.py  sync_project.py  sync_results.py
plugin/: _hpc  hpc.plugin.zsh
src/hpc_tools/: submit.py
