[project]
name = "hpc_tools"
version = "0.1.0"
description = ""
authors = [{ name = "Carel van Niekerk", email = "cvanniekerk@hhu.de" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["hpc-server-tools"]

[tool.uv.sources]
hpc-server-tools = { path = "server_tools", editable = true }

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
