[project]
name = "hpc_tools"
version = "1.0.0"
description = ""
authors = [{ name = "Carel van Niekerk", email = "cvanniekerk@hhu.de" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["hpc-server-tools"]

[tool.uv.sources]
hpc-server-tools = { git = "https://github.com/carelvniekerk/HPC-Server-Tools.git" }

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
